...
                        android:text="Tap + to start."
                        android:textColor="@color/grey_300"
                        android:textSize="14sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_incidents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_incident" />

            </FrameLayout>

...
                    android:src="@drawable/ic_home"
                    app:tint="@color/brand_blue" />
            </LinearLayout>

            <!-- Scan (Now consistent size) -->
            <LinearLayout
                android:id="@+id/btn_scan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
...
